...
    }
    
    @objc func didTapAddItemButton(_ sender: UIBarButtonItem)
    {
        // Create an alert
        let alert = UIAlertController(
            title: "New to-do item",
            message: "What do you need to do?",
            preferredStyle: .alert)
        
        // Add a text field to the alert for the new item's title
        alert.addTextField(configurationHandler: nil)
        
        // Add a "cancel" button to the alert
        alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
        
        // Add an "OK" button to the alert
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler:
            { (_) in
                if let title = alert.textFields?[0].text
                {
                    self.addNewToDoItem(title: title)
                }
...
